--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -79,6 +79,7 @@ img {
 .product {
   &-item {
     position: relative;
+    max-width: 293px;
     // max-height: 293px;
   }
 
@@ -406,3 +407,27 @@ img {
     transform: rotate(-360deg);
   }
 }
+
+// Swiper
+// .swiper {
+//   width: 100%;
+//   height: 100%;
+// }
+
+// .swiper-slide {
+//   text-align: center;
+//   font-size: 18px;
+//   background: #fff;
+
+//   /* Center slide text vertically */
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+// .swiper-slide img {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+// }
